--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
 
   <body>
+
+
+    <p> What everrrrr! </p>
+
     <div id="game">
       <div class="paddle" id="left-paddle"></div>
       <div class="paddle" id="right-paddle"></div>
